# Anchor-Tracking

./: .gitignore  README.md  requirements.txt
approach_1/hsv_filter/: main.py
approach_1/kalman_filter/: kf.py
approach_1/ml/: main.py  ml.py  plot_approach.py  plot_scenario.py
approach_1/tracker/: anchor_manager.py  color.py  main.py  object.py  tracker.py
approach_2/: anchor.py  anchor_manager.py  color.py  detector.py  kalman.py  main.py  ml.py  video_capture.py
hsv_filter/: main.py
kalman_filter/: kf.py  main.py
ml/: main.py
src/: anchor.py  anchors.py  color.py  main.cpp  main.py  object.py
src/blob/: blob.cpp  blob.hpp
src/init/: CMakeLists.txt  main.cpp
src/init/blob/: blob.cpp  blob.hpp  sdata.cpp
src/init/tracker/: tracker.cpp  tracker.hpp
src/init/video/: video.cpp  video.hpp
src/tracker/: main.py  tracker.cpp  tracker.hpp
src/video/: video.cpp  video.hpp
tracker/: anchor.py  anchor_manager.py  color.py  main.py  object.py  tracker.py
